--- a/node/movieSearchApp/package.json
+++ b/node/movieSearchApp/package.json
@@ -4,7 +4,7 @@
   "description": "Movie Search via OMDB",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "MWhite",
   "license": "ISC",
