added home view, css public, header and footer partials

--- a/YelpCamp/package.json
+++ b/YelpCamp/package.json
@@ -7,5 +7,10 @@
     "test": "nodemon server.js"
   },
   "author": "MWhite",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "request": "^2.88.0"
+  }
 }
