--- a/node/RESTfulBlog/package.json
+++ b/node/RESTfulBlog/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "method-override": "^3.0.0",
     "mongoose": "^5.3.6"
   }
 }
