--- a/YelpCamp/package.json
+++ b/YelpCamp/package.json
@@ -4,7 +4,8 @@
   "description": "CSteele - WebDev - YelpCamp Project",
   "main": "server.js",
   "scripts": {
-    "test": "nodemon server.js"
+    "test": "nodemon server.js",
+    "seed": "node config/seed.js"
   },
   "author": "MWhite",
   "license": "ISC",
