--- a/YelpCamp/package.json
+++ b/YelpCamp/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "mongoose": "^5.3.5",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.4.7",
     "request": "^2.88.0"
   }
 }
